--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,8 @@
 # Welcome {.unnumbered}
-Welcome to **R for Research**, a book written to give you a strong introduction to R programming language and its uses in research workflow. The primary goal of **R for Research** is to provide a clear and practical guide to using R for your entire research workflow. While R is practically seen as a programming language for statistical computing, it should be noted that since the development of R Markdown [(Yihui Xie, 2012)](https://bookdown.org/yihui/rmarkdown/), R use have extended beyond statistical analysis. Using R Markdown package within RStudio IDE, you can have a word-processor and statistical analysis tool. 
+Welcome to **R for Research**, a book written to give you a strong introduction to R programming language and its uses in research workflow. The primary goal of **R for Research** is to provide a clear and practical guide to using R for your entire research workflow. While R is practically seen as a programming language for statistical computing, it should be noted that since the development of Sweave [@leisch2002sweave], and R Markdown, [@xie2018r](https://bookdown.org/yihui/rmarkdown/), R use has gone beyond statistical analysis. Using these package within RStudio IDE, gives you a powerful word-processor and statistical program. 
 
 
-This book will be under development for a while; expected completion should be around early 2026. Do not be surprised if a lot of the chapters do not cohere. You are welcome to provide suggestions and give corrections through [github issues](https://github.com/xrander/r4r/issues). If you find anything that could improve the work and would also like to collaborate do not hesitate to reach me via [email](mailto:olamideadu@gmail.com).
+This book will be under development for a while; expected completion should be around early 2027. Do not be surprised if a lot of the chapters do not cohere. You are welcome to provide suggestions and give corrections through [github issues](https://github.com/xrander/r4r/issues). If you find anything that could improve the work and would also like to collaborate do not hesitate to reach me via [email](mailto:olamideadu@gmail.com).
 
 
 Cover image, a Red-legged Patridge walking in Snowy Van, in Turkiye is by [ezvedat](https://www.pexels.com/@ezvedat-337111750/) on the [pexels](https://www.pexels.com/@ezvedat-337111750/) platform. All pexels images are free to use.
