--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,36 @@
+@inproceedings{leisch2002sweave,
+  title={Sweave: Dynamic generation of statistical reports using literate data analysis},
+  author={Leisch, Friedrich},
+  booktitle={COMPSTAT: Proceedings in computational statistics},
+  pages={575--580},
+  year={2002},
+  organization={Springer}
+}
+
+
+@book{xie2018r,
+  title={R markdown: The definitive guide},
+  author={Xie, Yihui and Allaire, Joseph J and Grolemund, Garrett},
+  year={2018},
+  publisher={Chapman and Hall/CRC}
+}
+
+@article{ihaka1996r,
+  title={R: A Language for Data Analysis and Graphics. Journal of Computational and Graphical Statistics 5: 299.},
+  author={Ihaka, R and Gentleman, R},
+  journal={doi: 10.2307/1390807},
+  year={1996}
+}
+
+@book{akalin2020computational,
+  title={Computational genomics with R},
+  author={Akalin, Altuna},
+  year={2020},
+  publisher={Chapman and Hall/CRC}
+}
+
+
+
 @misc{Radečić,
   title={Introducing positron: A new, yet familiar IDE for R and python},
   url={https://www.appsilon.com/post/introducing-positron},
@@ -5,6 +38,8 @@
   author={Radečić, Dario},
   year={2024}
 } 
+
+
 
 @book{wickham2019advanced,
   title={Advanced r},
